<resources>
    <string name="app_name">BillKeeper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_bill">Add bill</string>
    <string name="overdue">Overdue</string>
    <string name="paid">Paid</string>
    <string name="payable">Payable</string>
    <string name="income">Income</string>
    <string name="budget">Budget</string>
    <string name="summary">Summary</string>
    <string name="export">Export</string>
    <string name="raport">Raport</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="whatisnew">What`s new</string>
    <string name="title_activity_add_income">Add income</string>
    <string name="title_activity_add_budget">Add budget</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signUp">Sign up now!</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_category">Invalid category name</string>

    <!-- String related to sign up -->
    <string name="action_sign_up">Sign up</string>

    <!-- Strings for textviews -->
    <string name="tv_username">Username</string>
    <string name="user_registered">User registered!</string>
    <string name="billsNoContent">There are no bills available!</string>
    <string name="budgetNoContent">There are no budgets available!</string>
    <string name="incomeNoContent">There are no incomes available!</string>
</resources>
